--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,6 +1,14 @@
 body {
   /*padding-left: 15px; */
-  font-family: 'PT Sans Narrow', sans-serif;
+  /*font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 2.2em; */
+  font: 17px 'Lora', serif;
+  font-weight: normal;
+  line-height: normal;
+  color: #000;
+  line-height: 29px;
+  font-weight: 300;
+}
 }
 
 h1 a {
@@ -9,7 +17,8 @@ h1 a {
 }
 
 .page-header {
-    background-color: #ff9400;
+    /*background-color: #ff9400;*/
+    background-color: #104B53;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -28,7 +37,8 @@ h1 a {
 .date {
   float: right;
   color: #828282;
-  margin-top: 20px;
+  margin-top: 10px;
+
 }
 
 .save {
