--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,25 +12,28 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
     </head>
-    <body>
-       <div class="container">
-            <div class="page-header">
+    <body class="container">
+        <div class="page-header">
+            {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-                <h1><a href="/">Django Blog</a></h1>
-            </div>
-            <div class="content container">
-                <div class="row">
-                    <div class="col-md-12">
-                    {% block content %}
-                    {% endblock %}
-                    </div>
+                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><small><span class="glyphicon glyphicon-lock"></span></small></a>
+            {% endif %}
+            <h1><a href="/">Django Blog</a></h1>
+        </div>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-12">
+                {% block content %}
+                {% endblock %}
                 </div>
             </div>
         </div>
 
-    <!--<script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <!--<script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
     </body>
     </html>
