Modified login form and stylish

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -31,6 +31,7 @@
                 </div>
             </div>
         </div>
+        <!--<div class="footer">Esto es el footer</div>-->
 
         <!--<script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
