--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,6 +8,7 @@ body {
   color: #000;
   line-height: 29px;
   font-weight: 300;
+  padding: 0 0 70px;
 }
 }
 
@@ -20,7 +21,8 @@ h1 a {
     /*background-color: #ff9400;*/
     background-color: #104B53;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    margin-bottom: 80px;
+    padding: 20px 20px 30px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -66,4 +68,29 @@ h1 a {
 
 .comment {
   margin: 20px 0px 20px 20px;
+}
+
+.paginate{
+  text-align: "center";
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  padding-bottom: 50px;
+  width: 14em;
+}
+
+
+.footer {
+  background-color: #ECECEC;
+  /*margin-bottom: 0px; */
+  height: 70px;
+  width: 60%;
+  bottom: 0;
+  position: fixed;
+  /*margin-top: 20px;*/
+  color: white;
+  padding-left : 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  border-radius:10px 10px 0px 0px;
 }
