--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,28 +1,34 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
- <div class="col-md-2"></div>
-    <div class="col-md-8">
-        {% if form.errors %}
-            <p>Your username and password didn't match. Please try again.</p>
-        {% endif %}
+    <div class="row">
+        <div class="col-md-6 col-md-offset-4">
+            {% if form.errors %}
+                <p>Your username and password didn't match. Please try again.</p>
+            {% endif %}
 
-        <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-            <table>
-            <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr>
-            </table>
+            <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
 
-            <input type="submit" value="login" />
-            <input type="hidden" name="next" value="{{ next }}" />
-        </form>
+             <div class="form-group">
+                <div class="field">
+                    {{ form.username.label_tag }}</br>
+                    {{ form.username }}
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="field">
+                    {{ form.password.label_tag }}</br>
+                    {{ form.password }}
+                </div>
+              </div>
+
+              <div class="actions">
+                <input type="submit" value="login" />
+                <input type="hidden" name="next" value="{{ next }}" />
+             </div>
+             </form>
+        </div>
     </div>
-<div class="col-md-2"></div>
 {% endblock %}
