--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,11 +2,11 @@ body {
   /*padding-left: 15px; */
   /*font-family: 'PT Sans Narrow', sans-serif;
   font-size: 2.2em; */
-  font: 17px 'Lora', serif;
+  font: 17px 'Playfair Display', serif;
   font-weight: normal;
   line-height: normal;
   color: #000;
-  line-height: 29px;
+  line-height: 28px;
   font-weight: 300;
   padding: 0 0 70px;
 }
@@ -15,6 +15,7 @@ body {
 h1 a {
   color: #FCA205;
   /*font-weight: bold; */
+  margin-bottom: 10px;
 }
 
 .page-header {
@@ -40,7 +41,6 @@ h1 a {
   float: right;
   color: #828282;
   margin-top: 10px;
-
 }
 
 .save {
