--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
           <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>-->
         <!--<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">-->
-        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
@@ -21,7 +21,7 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><small><span class="glyphicon glyphicon-lock"></span></small></a>
             {% endif %}
-            <h1><a href="/">Django Blog</a></h1>
+            <h1><a href="/">Django Simple Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
